# LedgerFlow

./: .gitignore  .mcp.env.example  EPIC_VALIDATION_REPORT.md  QUICK_START_GUIDE.md  README.md  pyproject.toml  run_tests.sh  setup_venv.sh  账目分类明细.xlsx
BOOKS/: README.md
dev-notes/: PRD.md  README.md  bmm-workflow-status.yaml  product-brief-veritas-accounting-2025-12-07.md  research-technical-2025-12-07.md  test-summary-epic1-2.md  total-row-and-net-worth.md  账目分类明细-review.md
dev-notes/analysis/: brainstorming-session-2025-12-07.md
docs/: PRD.md  accounting-verification.md  architecture.md  configuration.md  epics.md  error-handling.md  getting-started.md  missing-rules-summary.md  product-brief-veritas-accounting-2025-12-07.md  research-technical-2025-12-07.md  review-preview-guide.md  rule-management.md  rules-cr-dr-flip-analysis.md  test-summary-epic1-2.md  troubleshooting.md  unmatched-types-for-verification.txt  user-manual.md  yearly-validation.md  如何运行-how-to-run.md  工作手册-accountant-guide.md
docs/analysis/: brainstorming-session-2025-12-07.md
examples/: README.md  account_hierarchy_sample.xlsx  journal_2024.xlsx  journal_2024_transformed.xlsx  journal_entries_sample.xlsx  journal_entry_2020_2024.xlsx  journal_entry_sample.xlsx  ledger_output_sample.xlsx  mapping_rules_sample.xlsx  test_journal_new.xlsx
scripts/: check_income_expense_cr_dr.py  compare_quarterly.py  convert_mapping_file.py  create_examples.py  create_type_mapping.py  diagnose_ledger.py  generate_examples.py  generate_rules_from_old_types.py  list_unmatched_types.py  monitor_processing.sh  process_multi_sheet.py  run_all_sheets.py  run_for_accounting.bat  run_for_accounting.sh  transform_journal_2024.py  update_rules.py  validate_yearly_against_reference.py  yearly_validation_helpers.py
src/veritas_accounting/: __init__.py  __main__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_chinese_encoding.py  test_test_journal_new_pipeline.py  test_yearly_validation.py
tests/unit/: __init__.py  test_audit_trail.py  test_auto_fix.py  test_books_utils.py  test_cli.py  test_encoding.py  test_error_detector.py  test_error_message_generator.py  test_excel_reader.py  test_excel_writer.py  test_journal_reader.py  test_ledger_id_lookup.py  test_ledger_output.py  test_models.py  (+15 more)
(+53 files in other folders)
